[SAM-2574] Missed applying some styling to file type figure
Todo: Replace inline styles with css classes

--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -271,7 +271,7 @@
                       </a>
                     </ng-container>
                     <ng-container *ngIf="resource.type === 'file'">
-                      <figure class="m_V-3x m_L-1x m_R-1x" style="display: inline-block; vertical-align: middle">
+                      <figure class="m_V-3x m_L-1x m_R-1x" style="text-align: center; display: inline-block; vertical-align: middle">
                         <img src="{{resource.typeInfo.icon}}">
                         <figcaption><small><em>{{resource.typeInfo.name}}</em></small></figcaption>
                       </figure>
