[SAM-3073] Fix loading image file path

--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -305,7 +305,7 @@
           </ng-container>
 
           <ng-container *ngIf="!attachment">
-            <img src="assets/img/loading.svg">
+            <img src="src/assets/img/loading.svg">
           </ng-container>
         </section>
 
