--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -6,7 +6,10 @@
     <br />
     <div sam-sticky limit=1200 container="occupy-page">
       <!--Logo-->
-      <ng-container *ngIf="logoUrl">
+      <ng-container *ngIf="errorOrganization">
+        Logo Not Available
+      </ng-container>
+      <ng-container *ngIf="logoUrl && !errorOrganization">
         <img class="logo" [src]="logoUrl" alt="HTML5 Icon">
       </ng-container>
       <!--Side Navigation-->
@@ -53,6 +56,7 @@
           </strong>
           <ng-container *ngIf="organization.l2Name">{{ organization.l2Name }}</ng-container>
         </li>
+        <ng-container *ngIf="errorOrganization">Organization Cannot Be Loaded. Opportunity ID: {{opportunity.data.organizationId}}</ng-container>
         <li [attr.id]="generateID(opportunityFields.Location, 'header')"
             *ngIf="organization && shouldBeDisplayed(opportunityFields.Location)">
           <strong>Location: </strong>
