[SAM-3111] Add missing awards fields

--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -78,6 +78,57 @@
               <strong>Contract Award Number: </strong>
               {{ opportunity.data?.award?.number }}
             </li>
+            <li [attr.id]="generateID(opportunityFields.AwardedDUNS)" *ngIf="shouldBeDisplayed(opportunityFields.AwardedDUNS)">
+            <strong>Contractor Awarded DUNS / Name: </strong>
+              <span>
+                {{ opportunity.data?.award?.awardee?.duns}}
+                <ng-container *ngIf="!opportunity.data?.award?.awardee?.duns">
+                  &mdash;
+                </ng-container>
+              </span>
+            </li>
+            <li [attr.id]="generateID(opportunityFields.AwardedAddress)" *ngIf="shouldBeDisplayed(opportunityFields.AwardedAddress)">
+              <strong>Contractor Awarded Address: </strong>
+              <span>
+                <ng-container *ngIf=" opportunity.data?.award?.awardee?.location?.streetAddress ||
+                    opportunity.data?.award?.awardee?.location?.city ||
+                    opportunity.data?.award?.awardee?.location?.state ||
+                    opportunity.data?.award?.awardee?.location?.zip ||
+                    opportunity.data?.award?.awardee?.location?.country">
+                    {{opportunity.data?.award?.awardee?.location?.streetAddress}}<br>
+                    {{opportunity.data?.award?.awardee?.location?.city}}
+                <ng-container *ngIf="opportunity.data?.award?.awardee?.location?.city">,</ng-container>
+                    {{opportunity.data?.award?.awardee?.location?.state}}
+                    {{opportunity.data?.award?.awardee?.location?.zip}}<br>
+                    {{opportunity.data?.award?.awardee?.location?.country}}<br>
+                </ng-container>
+                <ng-container *ngIf=" !opportunity.data?.award?.awardee?.location?.streetAddress &&
+                    !opportunity.data?.award?.awardee?.location?.city &&
+                    !opportunity.data?.award?.awardee?.location?.state &&
+                    !opportunity.data?.award?.awardee?.location?.zip &&
+                    !opportunity.data?.award?.awardee?.location?.country">
+                    &mdash;
+                </ng-container>
+              </span>
+            </li>
+            <li [attr.id]="generateID(opportunityFields.AwardAmount)" *ngIf="shouldBeDisplayed(opportunityFields.AwardAmount)">
+              <strong>Contract Award Dollar Amount: </strong> <span>{{opportunity.data?.award?.amount}}</span>
+            </li>
+            <li [attr.id]="generateID(opportunityFields.AwardNumber)" *ngIf="shouldBeDisplayed(opportunityFields.AwardNumber)">
+              <strong>Contract Award Number: </strong> <span>{{opportunity.data?.award?.number}}</span>
+            </li>
+            <li [attr.id]="generateID(opportunityFields.AwardDate)" *ngIf="shouldBeDisplayed(opportunityFields.AwardDate)">
+              <strong>Contract Award Date: </strong> <span>{{opportunity.data?.award?.date | dateFormat: 'MMM DD, YYYY'}}</span>
+            </li>
+            <li [attr.id]="generateID(opportunityFields.LineItemNumber)" *ngIf="shouldBeDisplayed(opportunityFields.LineItemNumber)">
+              <strong>Contract Line Item Number: </strong>
+              <span>
+                {{opportunity.data?.award?.lineItemNumber}}
+                <ng-container *ngIf="!opportunity.data?.award?.lineItemNumber">
+                  &mdash;
+                </ng-container>
+              </span>
+            </li>
           </ul>
         </section>
 
