fix image align center

--- a/src/app/Help/image-library/image-library.template.html
+++ b/src/app/Help/image-library/image-library.template.html
@@ -10,7 +10,7 @@
               <span [id]="name+'-link-'+i" class="image-library-title" (click)="selectDetail(item,$event)">{{item.title}}</span>
             </div>
             <div class="image-div">
-              <img class="vertical-align" [src]="item.img" alt="{{item.title}}">
+              <img class="image-align-center" [src]="item.img" alt="{{item.title}}">
             </div>
         </div>
       </div>
