--- a/src/app/Help/image-library/image-library.template.html
+++ b/src/app/Help/image-library/image-library.template.html
@@ -9,7 +9,7 @@
           <span class="image-library-toggle" (click)="selectDetail(item,$event)">
             <i [id]="name+'-icon-'+i" class="fa fa-plus" [ngClass]="getItemClass(item)"></i>
           </span>
-          <div class="image-div" (click)="selectDetail(item,$event)"><img [src]="item.img" alt="{{item.title}}"></div>
+          <div class="image-div" (click)="selectDetail(item,$event)"><img class="image-align-center" [src]="item.img" alt="{{item.title}}"></div>
 
         </div>
       </div>
