[SAM-3111] Hide unused history section

--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -18,7 +18,7 @@
           <li><a href="{{ currentUrl + '#' + generateID(opportunityFields.Synopsis) }}">Synopsis/Description</a></li>
           <li><a href="{{ currentUrl + '#' + generateID(opportunityFields.Packages) }}">Packages</a></li>
           <li><a href="{{ currentUrl + '#' + generateID(opportunityFields.Classification) }}">Contact Information</a></li>
-          <li><a href="{{ currentUrl }}#history">History</a></li>
+          <!--<li><a href="{{ currentUrl }}#history">History</a></li>-->
         </ul>
       </nav>
       <nav *ngIf="currentTab == 'Award Notices'">
