Add hover over to images

--- a/src/styles/components/_image-library.scss
+++ b/src/styles/components/_image-library.scss
@@ -31,7 +31,7 @@
     text-decoration: none;
   }
 
-  .image-library-close:hover{
+  .image-library-close:hover, .image-div:hover, .image-library-toggle:hover{
     cursor: pointer;
   }
 
